bin/01-service-notused.yaml
apiVersion: v1
kind: Service
metadata:
  name: siorellana 
spec:
  ports:
  - port: 80 
    targetPort: 80
  selector:
    role: siorellana
