bin/01-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: siorellana 
spec:
  type: NodePort
  ports:
  - port: 80 
    targetPort: 80
    nodePort: 30000
  selector:
    role: siorellana
