bin/03-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: siorellana-lb
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
  selector:
    role: siorellana 
    app: hugo
