bin/06-ingress-notused.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: siorellana.com 
    http:
      paths:
      - backend:
          serviceName: siorellana
          servicePort: 80
#  - host: siorellana.com
#    http:
#      paths:
#      - backend:
#         serviceName: hello-v2-svc
#         servicePort: 80
